# bookstore_ebac

./: manage.py  pyproject.toml
bookstore/: __init__.py  settings.py
order/migrations/: 0001_initial.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
